--- a/views/books.erb
+++ b/views/books.erb
@@ -25,5 +25,5 @@
   <br>
   <label for="author">Author</label>
   <input type="text" name="author"></input>
-  <button type="submit">Submit</button
+  <button type="submit" value="submit">Submit</button
 </form>
